# CTHULHU

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
C2/: docker-compose.yml  env  main.sql  package.json
C2/API/: data.js
C2/backend/: Dockerfile  app.js  package.json
C2/frontend/: Dockerfile  package-lock.json  package.json
C2/frontend/src/: index.js
C2/frontend/src/assets/: chat.css
C2/frontend/src/components/: AccountEdit.js  AccountsManagement.js  Agent.js  AllAgents.js  BaseHome.js  ChatBody.js  ChatFooter.js  ChatPage.js  ChatUserPage.js  Footer.js  Login.js  Navbar.js  Register.js  UserPay.js
C2/frontend/src/utils/: config.js  functions.js
Docker/Database/: docker-compose.yml  main.sql
WrathOfCthulhu/: Cargo.toml
WrathOfCthulhu/src/: main.rs
src/: antisandbox.rs  main.rs
src/c2/: api.rs
src/encryption/: disk.rs  file.rs  file_encryption.rs  mod.rs
src/system/: file.rs  info.rs  mod.rs  sandbox.rs
