[package]
name = "rcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.7.5", features = ["ctr"] }
walkdir = "2"
sysinfo = "0.28.0"
rand = "0.8.5"
winapi = { version = "0.3.9", features = ["debugapi"] }
num_cpus = "1.15.0"
enigo = "0.1.2"
